--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Thai Flash</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Myanmar:wght@400;700&family=Noto+Serif+Thai:wght@800&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Myanmar:wght@400;700&family=Noto+Serif+Thai:wght@800&family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Lobster&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
